V1.1.13
- Corrosion beam flux cost increased 1450 -> 1750/s
- Discord PPC ACTUALLY decreased range this time (to 550)
- String of pearls speed reduced from 190 to 155
- Fixed an error where String of Pearls would zoom across the map when using its ship system
- Improved String of Pearls ship system AI again, this time making it back off when isolated and unable to use its system
- Precision Drive Systems now increases zero flux boost by 10
- Heavy Pyrowisp now has 2 charges and faster RoF, same DPS
- HPFs and Pyrowisps (including flamestrike) now get +100% max ammo count if mounted in a missile-capable slot
- Added descriptions for fighter weapons

V1.1.12
- Made corrosion torp and Lo Sulci effects weaker on larger ships
- Corrosion torpedo top speed reduced from 550 to 500


V1.1.11
- Wavefront friendlyfire -> 25% of normal damage
- Wavefront FF radius further reduced
- Wavefront now adds a bit of hard flux to target and scales with missile damage
- Aria station now has a little surprise for attackers
- Added Chirp PD (small) and Tarantella PD (medium)
- Added speed limit to Lo Sulci's gravitational frame dragging effect

V1.1.10
- Corrosion torpedoes now have a cap on how fast they can drag ships
- Fixed a crash when using Stellar Networks

V1.1.9
- Fixed a crash with String of Pearls shipsystem
- Pyrokinetic streamer: Range 800 -> 600
- Pyrokinetic streamer: Mounting in Ballistic, Hybrid, or Universal slot grants +200 range
- Pyrokinetic streamer: Mounting in Energy, Hybrid, or Universal slot grants EMP damage and arc
- Pyrokinetic streamer: Damage 55 -> 70, Flux 50 -> 65
- Discord PPC: Range 800 -> 550
- Discord PPC: Armor damage increased to 35, 25 if mounted in a ballistic slot
- Discord PPC: Mounting in Ballistic, Hybrid, or Universal slot grants +200 range
- Discord PPC: Damage 60 -> 80, deals soft flux if mounted in a ballistic slot
- Discord PPC: Flux 60 -> 68
- Atomic driver: flux 350 -> 250