@@ -14,7 +14,7 @@ Lo Sulci,na_losulci,Battleship,Nightcross,na_singdrive,30,22000,1000,20000,31250
 Mare Crisium,na_mare,Assault Frigate,Nightcross,na_relativitydrive,8,1400,175,3500,900,225,55,,130,190,140,80,200,120,FRONT,,360,0.2,.8,,,10,15,20,60,1,40,10,35000,4,20,240,.125,8,8,,,,,,,,nightcross_bp_heavy,,.6,2,3,19571
 String of Pearls,na_sop,Skirmisher,Nightcross,na_gravitycatapult,7,1000,250,2500,900,175,45,,155,220,170,90,220,90,OMNI,,180,0.3,0.6,,,5,8,15,45,0.7,40,10,24500,4,20,180,.125,6,6,,,,,,,,nightcross_bp_fast,,.6,2,3,19575
 Krun Macula,na_macula,Destroyer,Nightcross,na_tidaldisruption,12,3000,400,6800,6667,400,100,,95,90,60,30,100,300,FRONT,,240,0.3,0.6,,,25,50,50,40,2,20,9,60000,5,20,300,0.25,13,13,,,,,,,,nightcross_bp_rare,,.6,2,3,19575
-Nammu,na_nammu,Utility Vessel,Nightcross,forgevats,9,3800,650,5000,6667,250,80,2,80,75,50,20,50,320,OMNI,,180,.2,0.9,,,20,180,175,150,2,60,9,37000,4,20,380,0.25,9,9,,,,,,,,nightcross_bp_heavy,,.6,2,3,19575
+Nammu,na_nammu,Utility Vessel,Nightcross,forgevats,9,3800,650,5000,6667,250,80,2,80,75,50,20,50,320,OMNI,,180,.2,0.9,,,20,180,175,150,2,60,9,37000,4,20,380,0.25,9,9,,,,,,,CARRIER,nightcross_bp_heavy,,.6,2,3,19575
 Fossa Magna,na_fossa,Fast Destroyer,Nightcross,na_fastcapacitors,8,2700,320,5000,6667,325,90,,110,140,60,40,100,250,OMNI,,180,0.3,0.65,,,20,35,75,50,2,20,10,45000,5,20,320,.125,11,11,,,,,,,,nightcross_bp_fast,,.6,2,3,19575
 Hardlight Generator,na_hardlightgenerator,,,,0,3000,400,1000,,1000,8,,50,50,50,50,50,350,NONE,,,,,,,,,,,,,,,,5,,,0,0,,,,,,,"UNBOARDABLE, HIDE_IN_CODEX","module_hull_bar_only, module_unselectable, module_refit_bright, no_autofit, hardlight_generator",,1,2,2,19576
 Left Wing,na_echo_leftmodule,,,,0,1250,750,1000,,1000,8,,50,50,50,50,50,350,NONE,,,,,,,,,,,,,,,,5,,,0,0,,,,,,,"UNBOARDABLE, HIDE_IN_CODEX","module_hull_bar_only, module_unselectable, module_refit_bright, no_autofit",,1,2,2,19573
