@@ -15,6 +15,8 @@
 	"hitGlowRadius":55,
     "textureScrollSpeed":-256.0,
 	"pixelsPerTexel":5.0,
+	"passThroughMissiles":true,
+	"passThroughFighters":true,
 	"passThroughFightersOnlyWhenDestroyed":true,
 	"bulletSprite":"graphics/missiles/shell_gauss_cannon.png",
 	"textureType":"WEAVE",  # only needed for BEAM spawnType
